syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";

option go_package = ".;users_pb";


service UsersService {
    rpc Create (CreateUserRequest) returns (CreateUserResponse);
    rpc Login (LoginUserRequest) returns (LoginUserResponse);
    rpc Get (GetUserRequest) returns (GetUserResponse); // one or more
    rpc Update (UpdateUserRequest) returns (UpdateUserResponse);
    rpc Delete (DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
    int64 id = 1;
    string username = 2;
    string address = 3;
    google.protobuf.Timestamp regdate = 4;
    repeated int64 order_ids = 5;
    // also have password and token in database
}

// Create

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string address = 3;
}

message CreateUserResponse {
    User user = 1;
}

// Login

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    int64 id = 1;
    string token = 2;
}

// Get

message GetUserRequest {
    repeated int32 usernames = 1;
}

message GetUserResponse {
    repeated User users = 1;
}

// Update

message UpdateUserRequest {
    string token = 1;
    User user = 2;
}

message UpdateUserResponse {
    User user = 1;
}

// Delete

message DeleteUserRequest {
    string token = 1;
}

message DeleteUserResponse {
    User user = 1;
}